--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "aframe": "^0.6.1",
+    "aframe-physics-components": "^1.1.0",
+    "aframe-physics-system": "^2.0.0",
     "aframe-react": "^4.3.0",
+    "aframe-room-component": "^0.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13"
