--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "aframe": "^0.6.1",
+    "aframe-animation-component": "^3.2.5",
+    "aframe-fence-component": "^0.1.0",
+    "aframe-particle-system-component": "^1.0.10",
     "aframe-physics-components": "^1.1.0",
     "aframe-physics-system": "^2.0.0",
     "aframe-react": "^4.3.0",
     "aframe-room-component": "^0.2.0",
+    "babel-polyfill": "^6.26.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13"
