--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "aframe": "^0.6.1",
     "aframe-animation-component": "^3.2.5",
     "aframe-fence-component": "^0.1.0",
-    "aframe-particle-system-component": "^1.0.10",
     "aframe-physics-components": "^1.1.0",
     "aframe-physics-system": "^2.0.0",
     "aframe-react": "^4.3.0",
     "aframe-room-component": "^0.2.0",
     "babel-polyfill": "^6.26.0",
+    "jquery": "^3.2.1",
+    "mousetrap": "^1.6.1",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "15.3.2",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   },
   "scripts": {
@@ -21,5 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "aframe-mouse-cursor-component": "^0.5.2"
   }
 }
