--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aframe": "^0.6.1",
     "aframe-animation-component": "^3.2.5",
     "aframe-fence-component": "^0.1.0",
+    "aframe-firebase-component": "^4.0.3",
     "aframe-physics-components": "^1.1.0",
     "aframe-physics-system": "^2.0.0",
     "aframe-react": "^4.3.0",
