--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "aframe-react": "^4.3.0",
     "aframe-room-component": "^0.2.0",
     "babel-polyfill": "^6.26.0",
+    "firebase": "^4.4.0",
     "jquery": "^3.2.1",
     "mousetrap": "^1.6.1",
+    "re-base": "2.2.0",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "15.3.2",
     "react-bootstrap": "^0.31.3",
