--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^4.4.0",
     "jquery": "^3.2.1",
     "mousetrap": "^1.6.1",
+    "popper": "^1.0.0",
     "re-base": "2.2.0",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "15.3.2",
